<resources>
    <string name="app_name">BAND-IT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BAND-IT</string>
    <string name="nav_header_subtitle">Table of Contents</string>
    <string name="content_cover">Cover</string>
    <string name="content_copyright">Copyright</string>
    <string name="content_letter">Intro</string>
    <string name="content_safety">Safety First</string>
    <string name="content_basic">Basic Set Up</string>
    <string name="content_styles_using_two_bands">Styles Using 2 Bands</string>
    <string name="content_bridge">Crossing the Bridge</string>
    <string name="content_xmarks">X Marks the Spot</string>
    <string name="content_wrestler">Thumb Wrestler</string>
    <string name="content_trapped">Trapped Two</string>
    <string name="content_twisted">Simply Twisted</string>
    <string name="content_ring">Ring Thing</string>
    <string name="content_bowtie">Bow Tie</string>
    <string name="content_styles_using_three_bands">Styles Using 3 Bands</string>
    <string name="content_tower">Eiffel Tower</string>
    <string name="content_thew">The \'W\'</string>
    <string name="content_flanked">Flanked</string>
    <string name="content_closing">Closing In</string>
    <string name="content_two">Two Too Twisted</string>
    <string name="content_crowd">3\'s A Crowd</string>
    <string name="content_crowdtwist">3\'s A Crowd, and One\'s Twisted</string>
    <string name="content_spider">Spider Web</string>
    <string name="content_webbed">Webbed Wrist</string>
    <string name="content_ccuff">Chic Cuff</string>
    <string name="content_tcuff">Twisted Cuff</string>
    <string name="content_butterfly">Resting Butterfly</string>
    <string name="content_flight">Butterfly In Flight</string>
    <string name="content_close">In Closing</string>
    <string name="content_copyright_text_1">Copyright © 2012–2020</string>
    <string name="content_copyright_text_2">All rights reserved. No part of this app may be reproduced or transmitted in any form or by any means, electronic or mechanical, including photocopying, recording, or by any information storage or retrieval system, without written permission from the author.</string>
    <string name="content_copyright_text_3">Trademarks are property of their respective holders. When used, trademarks are for the benefit of the trademark owner only.</string>
    <string name="content_letter_text_1">Hi Readers!</string>
    <string name="content_letter_text_2">Do you use a hair band to put your hair up? When your hair isn\'t up, do you wear the hair band around your wrist for safe keeping until you do want to put your hair up? Then instead of just having it on your wrist, why not make it look funky and cool! This app will show you a few different styles for using hair bands to decorate your hand and wrist, with step-by-step guides on how to create each one.</string>
    <string name="content_letter_text_3">When you\'ve mastered each style in this app you can visit our blog at <a href="">BandItGuide.blogspot.com</a> and find even more funky cool designs. You can even submit your own creative styles!</string>
    <string name="content_letter_text_4">Have fun, stay safe, and get to creating!</string>
    <string name="content_letter_text_5">Sincerely,</string>
    <string name="content_letter_text_6">Joni Riley-Gardner</string>
    <string name="content_safety_text">Always make sure your bands are never too tight and cut off circulation. If they do this, please remove the band immediately and choose a different band that is a little looser. When wearing these styles also be aware that they can catch on things, just like when you wear them around your wrist. Now, throughout the app we will use this diagram to help explain the process for making each style: (all instructions are written for creating designs on your left hand)</string>
    <string name="content_basic_text_1">First, we\'ll start out showing you how to connect two bands. (You\'ll use this process a lot when creating most of the styles.)</string>
    <string name="content_basic_text_2"><b>Step 1:</b> Lay both bands so that they are overlapping.</string>
    <string name="content_basic_text_3"><b>Step 2:</b> Pinch together the opposite sides of the band on bottom so that it curves around the other band.</string>
    <string name="content_basic_text_4"><b>Step 3:</b> Grab the band on the right by the loop on top and pull it under the bottom loop.</string>
    <string name="content_basic_text_5"><b>Step 4:</b> Pull the loop all the way through until the right band is snug around the left band.</string>
    <string name="content_basic_text_6">If you flip it over, it will look like this:</string>
    <string name="content_basic_text_7">* If you pull the right band too much it will change the look of the knot. Throughout this app we will use the knot above, however feel free to use whichever look you like best! You can also visit our blog at <a href="">BandItGuide.blogspot.com</a> to check out other styles of knots that you can use.</string>
    <string name="basic_1_description">Basic 1</string>
    <string name="basic_2_description">Basic 2</string>
    <string name="basic_3_description">Basic 3</string>
    <string name="basic_4_description">Basic 4</string>
    <string name="basic_5_description">Basic 5</string>
    <string name="content_bridge_text_1">For this style you would follow <b>Steps 1-4</b> of the <a href="">Basic Set Up</a>.</string>
    <string name="content_bridge_text_2"><b>Step 5:</b> Loop one of the bands over your pinky.</string>
    <string name="content_bridge_text_3"><b>Step 6:</b> Loop the other band around your thumb.</string>
    <string name="bridge_1_description">Bridge 1</string>
    <string name="content_xmarks_text_1">Follow <b>Steps 1-4</b> of the <a href="">Basic Set Up</a>. Then:</string>
    <string name="content_xmarks_text_2"><b>Step 5:</b> Take one of the bands and wrap it around your wrist so that the knot is on top of your arm and the other band is lying on top of your hand.</string>
    <string name="content_xmarks_text_3"><b>Step 6:</b> Loop the other band around your wrist as well.</string>
    <string name="content_xmarks_text_4"><b>Step 7:</b> Spread the bands out to your desired length. Easy peasy!</string>
    <string name="xmarks_1_description">XMarks 1</string>
    <string name="xmarks_2_description">XMarks 2</string>
    <string name="content_wrestler_text_1">If you\'ve already done the <b>X Marks the Spot</b> style this one will be easy too! Just follow <b>Steps 1-4</b> of the <a href="">Basic Set Up</a>.</string>
    <string name="content_wrestler_text_2"><b>Step 5:</b> Wrap one of the bands around your wrist.</string>
    <string name="content_wrestler_text_3"><b>Step 6:</b> Take the other band and wrap it around your thumb, or any of your other fingers.</string>
    <string name="wrestler_1_description">Wrestler 1</string>
    <string name="content_trapped_text_1">This is a continuation of our previous style. Start by following <b>Steps 1-5</b> of <a href="">Thumb Wrestler</a>.</string>
    <string name="content_trapped_text_2"><b>Step 6:</b> Take the other band and wrap it around any two fingers.</string>
    <string name="trapped_1_description">Trapped 1</string>
    <string name="content_twisted_text_1">Here\'s another easy one using the <a href="">Basic Set Up</a>, just follow <b>Steps 1-4</b>.</string>
    <string name="content_twisted_text_2"><b>Step 5:</b> Wrap one of the bands around your wrist.</string>
    <string name="content_twisted_text_3"><b>Step 6:</b> Take the other band and twist it a couple of times, then wrap it around one of your fingers.</string>
    <string name="twisted_1_description">Twisted 1</string>
    <string name="content_ring_text_1">For this style, follow <b>Steps 1-4</b> of the <a href="">Basic Set Up</a>. (Have you noticed yet that we use this basic set up a lot?)</string>
    <string name="content_ring_text_2"><b>Step 5:</b> Wrap one of the bands around your wrist so that the other band lies on the palm side of your hand (instead of the back of your hand).</string>
    <string name="content_ring_text_3"><b>Step 6:</b> Wrap the other band around your middle finger, and done! (You can also wrap the band around any of your other fingers to slightly change up the look.)</string>
    <string name="ring_1_description">Ring 1</string>
    <string name="content_bowtie_text_1">Let\'s make a cute bow! First, use <b>Step 1</b> and <b>Step 2</b> of the <a href="">Basic Set Up</a>.</string>
    <string name="content_bowtie_text_2"><b>Step 3:</b> Grasp the opposite sides of the band on the right and create two \'bunny ears\'. (Yep, we\'re going to use the kindergarten version of tying shoelaces to get our bow tied!)</string>
    <string name="content_bowtie_text_3"><b>Step 4:</b> Overlap the two bunny ears (to make an \'X\').</string>
    <string name="content_bowtie_text_4"><b>Step 5:</b> Take one of the ears and wrap it around the other, then pull it through the hole (or bottom of the \'X\').</string>
    <string name="content_bowtie_text_5"><b>Step 6:</b> Pull the bow tight so you don\'t lose it! Then place the band (the one now holding the bow tie) on your wrist.</string>
    <string name="bowtie_1_description">Bow Tie 1</string>
    <string name="bowtie_2_description">Bow Tie 2</string>
    <string name="content_tower_text_1">Use <b>Steps 1-4</b> of the <a href="">Basic Set Up</a>.</string>
    <string name="content_tower_text_2"><b>Step 5:</b> Take the third band and loop it around the first band in the same way you did the second band (so that the second and third bands are about 2 inches apart, or whichever amount of spacing you desire).</string>
    <string name="content_tower_text_3"><b>Step 6:</b> Place band 1 over your wrist so that bands 2 and 3 are lying on top of your hand.</string>
    <string name="content_tower_text_4"><b>Step 7:</b> Wrap band 2 around your middle finger.</string>
    <string name="content_spider_text_1">Do you know what the first steps are? Yep, this again: Follow <b>Steps 1-4</b> of the <a href="">Basic Set Up</a>.</string>
    <string name="content_spider_text_2"><b>Step 5:</b> Loop band 3 around the knot that band 1 and 2 make together, in the same style loop that you used putting band 2 on band 1. It\'s a little tricky, but keep trying and you\'ll get it!</string>
    <string name="content_spider_text_3"><b>Step 6:</b> Wrap band 1 around your thumb.</string>
    <string name="content_spider_text_4"><b>Step 7:</b> Wrap band 2 around your pinky.</string>
    <string name="content_spider_text_5"><b>Step 8:</b> Wrap band 3 around your middle finger.</string>
    <string name="spider_1_description">Spider 1</string>
    <string name="spider_2_description">Spider 2</string>
    <string name="content_ccuff_text_1">Get your basic set up ready by using <b>Steps 1-4</b> of the <a href="">Basic Set Up</a>.</string>
    <string name="content_ccuff_text_2"><b>Step 5:</b> Take band 3 and loop it around the first band in the same way you did band 2 (however, knot it on the opposite side of band 1 across from band 2).</string>
    <string name="content_ccuff_text_3"><b>Step 6:</b> Wrap band 3 around your wrist so that bands 1 and 2 lay on top of your hand.</string>
    <string name="content_ccuff_text_4"><b>Step 7:</b> Wrap band 2 around your wrist also.</string>
    <string name="content_ccuff_text_5"><b>Step 8:</b> Let band 2 be around your wrist and band 3 be farther down your forearm so that band 1 is stretched out.</string>
    <string name="content_ccuff_text_6">See more variations at <a href="">BandItGuide.blogspot.com</a>.</string>
    <string name="ccuff_1_description">Chic Cuff 1</string>
    <string name="ccuff_2_description">Chic Cuff 2</string>
</resources>