<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/group1">
        <item
            android:id="@+id/nav_cover"
            android:title="@string/content_cover" />
        <item
            android:id="@+id/nav_copyright"
            android:title="@string/content_copyright" />
        <item
            android:id="@+id/nav_letter"
            android:title="@string/content_letter" />
        <item
            android:id="@+id/nav_safety"
            android:title="@string/content_safety" />
        <item
            android:id="@+id/nav_basic"
            android:title="@string/content_basic" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/group2">
        <item
            android:id="@+id/nav_style_two_bands"
            android:enabled="false"
            android:title="@string/content_styles_using_two_bands" />
        <item
            android:id="@+id/nav_bridge"
            android:title="@string/content_bridge" />
        <item
            android:id="@+id/nav_xmarks"
            android:title="@string/content_xmarks" />
        <item
            android:id="@+id/nav_wrestler"
            android:title="@string/content_wrestler" />
        <item
            android:id="@+id/nav_trapped"
            android:title="@string/content_trapped" />
        <item
            android:id="@+id/nav_twisted"
            android:title="@string/content_twisted" />
        <item
            android:id="@+id/nav_ring"
            android:title="@string/content_ring" />
        <item
            android:id="@+id/nav_bowtie"
            android:title="@string/content_bowtie" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/group3">
        <item
            android:id="@+id/nav_style_three_bands"
            android:enabled="false"
            android:title="@string/content_styles_using_three_bands" />
        <item
            android:id="@+id/nav_tower"
            android:title="@string/content_tower" />
    </group>

</menu>
